fix: corrected spacing of navbar in tv shows and movies. Also made the navbar collapse respond to a smaller webpage size

--- a/frontend/src/styles/Movie.css
+++ b/frontend/src/styles/Movie.css
@@ -1,9 +1,9 @@
 /* p {
   color: black;
 } */
-
+/* 
 #filter-by{
   color: black;
   font: 2rem monospace; 
-  /* font-family: monospace; */
-}
+  font-family: monospace;
+} */
